--- a/src/main/webapp/admin/ilmoittautumiset/ilmoittautumiset.xhtml
+++ b/src/main/webapp/admin/ilmoittautumiset/ilmoittautumiset.xhtml
@@ -1,7 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<ace:tabSet tabChangeListener="#{ilmoittautumisAdmin.tabiMuuttui}">
+	<ace:tabSet tabChangeListener="#{ilmoittautumisAdmin.tabiMuuttui}" immediate="true">
 		<ace:tabPane label="Treenikäynnit">
 			<ui:include src="treenikäynnit.xhtml" />
 		</ace:tabPane>
