--- a/src/main/webapp/admin/perustiedot/treenityypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/treenityypit.xhtml
@@ -15,7 +15,7 @@
 			<ace:ajax render="@form" />
 		</h:commandButton>
 		<h:panelGrid columns="3" columnClasses="tabletop, tabletop, tabletop">
-			<ace:dataTable value="#{kaikkiTreenityypit}" var="_treenityyppi" selectionMode="single" rows="10" style="width:300px"
+			<ace:dataTable value="#{treenityypit}" var="_treenityyppi" selectionMode="single" rows="10" style="width:300px"
 				rowSelectListener="#{perustietoAdmin.treenityyppiValittu}" stateMap="#{perustietoAdmin.treenityyppiRSM}"
 				paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false">
 				<ace:column headerText="Treenityyppi" styleClass="lefttext">
@@ -32,26 +32,14 @@
 						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
-				<h:panelGrid columns="3">
-					<h:commandButton rendered="#{treenityyppi != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-						action="#{perustietoAdmin.tallennaTreenityyppi}">
+				<h:panelGrid columns="2" rendered="#{treenityyppi != null}">
+					<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{perustietoAdmin.tallennaTreenityyppi}">
 						<f:ajax execute="@form" render="@form" />
 					</h:commandButton>
-					<h:commandButton rendered="#{treenityyppi.poistettavissa and fn:length(treenityyppiKäyttö) == 0}" value="x"
-						styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaTreenityypinPoisto').show();" image="/kuvat/poista.png"
-						immediate="true" />
+					<h:commandButton styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaTreenityypinPoisto').show();"
+						image="/kuvat/poista.png" immediate="true" />
 				</h:panelGrid>
 			</h:panelGrid>
-			<ace:panel header="Käyttö (#{fn:length(treenityyppiKäyttö)})" style="width:300px"
-				rendered="#{treenityyppi != null and treenityyppi.poistettavissa}">
-				<ace:dataTable value="#{treenityyppiKäyttö}" var="_treeni" rows="10" rendered="#{fn:length(treenityyppiKäyttö) > 0}"
-					paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false">
-					<ace:column styleClass="lefttext">
-						<h:outputText value="#{_treeni.nimi}" />
-					</ace:column>
-				</ace:dataTable>
-				<h:outputText value="Ei käytössä" rendered="#{fn:length(treenityyppiKäyttö) == 0}" />
-			</ace:panel>
 		</h:panelGrid>
 	</h:panelGrid>
 </ui:composition>
