--- a/src/main/webapp/admin/perustiedot/roolit.xhtml
+++ b/src/main/webapp/admin/perustiedot/roolit.xhtml
@@ -14,10 +14,10 @@
 			immediate="true">
 			<ace:ajax render="@form" />
 		</h:commandButton>
-		<h:panelGrid columns="3" columnClasses="tabletop, tabletop, tabletop">
-			<ace:dataTable value="#{kaikkiRoolit}" var="_rooli" selectionMode="single" rows="10" style="width:300px"
-				paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false"
-				rowSelectListener="#{perustietoAdmin.rooliValittu}" stateMap="#{perustietoAdmin.rooliRSM}">
+		<h:panelGrid columns="2" columnClasses="tabletop, tabletop, tabletop">
+			<ace:dataTable value="#{roolit}" var="_rooli" selectionMode="single" rows="10" style="width:300px" paginator="true"
+				paginatorPosition="bottom" paginatorAlwaysVisible="false" rowSelectListener="#{perustietoAdmin.rooliValittu}"
+				stateMap="#{perustietoAdmin.rooliRSM}">
 				<ace:column headerText="Rooli" styleClass="lefttext">
 					<h:outputText value="#{_rooli.nimi}" />
 				</ace:column>
@@ -32,29 +32,14 @@
 						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
-				<h:panelGrid columns="3">
-					<h:commandButton rendered="#{rooli != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-						action="#{perustietoAdmin.tallennaRooli}">
+				<h:panelGrid columns="2" rendered="#{rooli != null}">
+					<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{perustietoAdmin.tallennaRooli}">
 						<f:ajax execute="@form" render="@form" />
 					</h:commandButton>
-					<h:commandButton rendered="#{rooli != null}" value="x" styleClass="ikoni"
-						action="#{perustietoAdmin.peruutaRoolimuutos}" image="/kuvat/peruuta_muutos.png" immediate="true">
-						<f:ajax render="@form" />
-					</h:commandButton>
-					<h:commandButton rendered="#{rooli.poistettavissa and fn:length(rooliKäyttö) == 0}" value="x" styleClass="ikoni"
-						onclick="ice.ace.instance('form:vahvistaRoolinPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+					<h:commandButton styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaRoolinPoisto').show();"
+						image="/kuvat/poista.png" immediate="true" />
 				</h:panelGrid>
 			</h:panelGrid>
-			<ace:panel header="Käyttö (#{fn:length(rooliKäyttö)})" style="width:300px"
-				rendered="#{rooli != null and rooli.poistettavissa}">
-				<ace:dataTable value="#{rooliKäyttö}" var="_henkilö" rows="10" rendered="#{fn:length(rooliKäyttö) > 0}"
-					paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false">
-					<ace:column styleClass="lefttext">
-						<h:outputText value="#{_henkilö.nimi}" />
-					</ace:column>
-				</ace:dataTable>
-				<h:outputText value="Ei käytössä" rendered="#{fn:length(rooliKäyttö) == 0}" />
-			</ace:panel>
 		</h:panelGrid>
 	</h:panelGrid>
 </ui:composition>
