--- a/src/main/webapp/admin/perustiedot/vyöarvot.xhtml
+++ b/src/main/webapp/admin/perustiedot/vyöarvot.xhtml
@@ -34,7 +34,7 @@
 					<h:outputText value="#{_vyöarvo.järjestys}" />
 				</ace:column>
 			</ace:dataTable>
-			<h:panelGrid style="margin-left:20px; width:350px">
+			<h:panelGrid style="margin-left:20px; width:450px">
 				<ace:panel header="Vyöarvo" rendered="#{vyöarvo != null}" style="width:350px">
 					<h:panelGrid columns="2">
 						<h:outputText value="Nimi" />
@@ -45,7 +45,7 @@
 						<h:outputText value="Kuvaus" />
 						<h:panelGrid>
 							<ace:message for="form:kuvaus" />
-							<h:inputText value="#{vyöarvo.kuvaus}" id="kuvaus" size="20" />
+							<h:inputText value="#{vyöarvo.kuvaus}" id="kuvaus" size="30" />
 						</h:panelGrid>
 						<h:outputText value="Minimikuukaudet" />
 						<h:panelGrid>
@@ -64,26 +64,14 @@
 						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
-				<h:panelGrid columns="3">
-					<h:commandButton rendered="#{vyöarvo != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-						action="#{perustietoAdmin.tallennaVyöarvo}">
+				<h:panelGrid columns="2" rendered="#{vyöarvo != null}">
+					<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{perustietoAdmin.tallennaVyöarvo}">
 						<f:ajax execute="@form" render="@form" />
 					</h:commandButton>
-					<h:commandButton rendered="#{vyöarvo.poistettavissa and fn:length(vyöarvoKäyttö) == 0}" value="x"
-						styleClass="ikoni" image="/kuvat/poista.png" immediate="true"
+					<h:commandButton styleClass="ikoni" image="/kuvat/poista.png" immediate="true"
 						onclick="ice.ace.instance('form:vahvistaVyöarvonPoisto').show();" />
 				</h:panelGrid>
 			</h:panelGrid>
-			<ace:panel header="Käyttö (#{fn:length(vyöarvoKäyttö)})" style="width:300px"
-				rendered="#{vyöarvo != null and vyöarvo.poistettavissa}">
-				<ace:dataTable value="#{vyöarvoKäyttö}" var="_harrastaja" rows="10" rendered="#{fn:length(vyöarvoKäyttö) > 0}"
-					paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false">
-					<ace:column>
-						<h:outputText value="#{_harrastaja.nimi}" />
-					</ace:column>
-				</ace:dataTable>
-				<h:outputText value="Ei käytössä" rendered="#{fn:length(vyöarvoKäyttö) == 0}" />
-			</ace:panel>
 		</h:panelGrid>
 	</h:panelGrid>
 </ui:composition>
