--- a/src/main/webapp/admin/perustiedot/perustiedot.xhtml
+++ b/src/main/webapp/admin/perustiedot/perustiedot.xhtml
@@ -1,7 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<ace:tabSet>
+	<ace:tabSet immediate="true" cancelOnInvalid="false">
 		<ace:tabPane label="Treenit">
 			<ui:include src="treenit.xhtml" />
 		</ace:tabPane>
