--- a/src/main/webapp/admin/perustiedot/roolit.xhtml
+++ b/src/main/webapp/admin/perustiedot/roolit.xhtml
@@ -10,11 +10,19 @@
 		</h:panelGrid>
 	</ace:confirmationDialog>
 	<h:panelGrid>
-		<h:commandButton action="#{perustietoAdmin.lisääRooli}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-			immediate="true">
-			<ace:ajax render="@form" />
-		</h:commandButton>
-		<h:panelGrid columns="2" columnClasses="tabletop, tabletop, tabletop">
+		<h:panelGrid columns="3">
+			<h:commandButton action="#{perustietoAdmin.lisääRooli}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+				immediate="true">
+				<ace:ajax render="@form" />
+			</h:commandButton>
+			<h:commandButton rendered="#{rooli != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
+				action="#{perustietoAdmin.tallennaRooli}">
+				<f:ajax execute="@form" render="@form" />
+			</h:commandButton>
+			<h:commandButton rendered="#{rooli != null}" styleClass="ikoni"
+				onclick="ice.ace.instance('form:vahvistaRoolinPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+		</h:panelGrid>
+		<h:panelGrid columns="2" columnClasses="tabletop, tabletop">
 			<ace:dataTable value="#{roolit}" var="_rooli" selectionMode="single" rows="10" style="width:300px" paginator="true"
 				paginatorPosition="bottom" paginatorAlwaysVisible="false" rowSelectListener="#{perustietoAdmin.rooliValittu}"
 				stateMap="#{perustietoAdmin.rooliRSM}">
@@ -32,13 +40,6 @@
 						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
-				<h:panelGrid columns="2" rendered="#{rooli != null}">
-					<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{perustietoAdmin.tallennaRooli}">
-						<f:ajax execute="@form" render="@form" />
-					</h:commandButton>
-					<h:commandButton styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaRoolinPoisto').show();"
-						image="/kuvat/poista.png" immediate="true" />
-				</h:panelGrid>
 			</h:panelGrid>
 		</h:panelGrid>
 	</h:panelGrid>
