--- a/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
@@ -10,10 +10,18 @@
 		</h:panelGrid>
 	</ace:confirmationDialog>
 	<h:panelGrid>
-		<h:commandButton action="#{perustietoAdmin.lisääSopimustyyppi}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-			immediate="true">
-			<ace:ajax render="@form" />
-		</h:commandButton>
+		<h:panelGrid columns="3">
+			<h:commandButton action="#{perustietoAdmin.lisääSopimustyyppi}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+				immediate="true">
+				<ace:ajax render="@form" />
+			</h:commandButton>
+			<h:commandButton rendered="#{sopimustyyppi != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
+				action="#{perustietoAdmin.tallennaSopimustyyppi}">
+				<f:ajax execute="@form" render="@form" />
+			</h:commandButton>
+			<h:commandButton rendered="#{sopimustyyppi != null}" styleClass="ikoni"
+				onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+		</h:panelGrid>
 		<h:panelGrid columns="2" columnClasses="tabletop, tabletop">
 			<ace:dataTable value="#{sopimustyypit}" var="_sopimustyyppi" selectionMode="single" rows="10" paginator="true"
 				paginatorPosition="bottom" paginatorAlwaysVisible="false"
@@ -149,13 +157,6 @@
 						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
-				<h:panelGrid columns="2" rendered="#{sopimustyyppi != null}">
-					<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{perustietoAdmin.tallennaSopimustyyppi}">
-						<f:ajax execute="@form" render="@form" />
-					</h:commandButton>
-					<h:commandButton styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').show();"
-						image="/kuvat/poista.png" immediate="true" />
-				</h:panelGrid>
 			</h:panelGrid>
 			<ace:panel header="Laskutustiedot" rendered="#{sopimustyyppi != null}">
 				<h:panelGrid columns="2">
