--- a/src/main/webapp/admin/perustiedot/treenit.xhtml
+++ b/src/main/webapp/admin/perustiedot/treenit.xhtml
@@ -9,10 +9,18 @@
 			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaTreeninPoisto').hide()" />
 		</h:panelGrid>
 	</ace:confirmationDialog>
-	<h:commandButton action="#{perustietoAdmin.lisääTreeni}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-		immediate="true">
-		<ace:ajax render="@form" />
-	</h:commandButton>
+	<h:panelGrid columns="3">
+		<h:commandButton action="#{perustietoAdmin.lisääTreeni}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+			immediate="true">
+			<ace:ajax render="@form" />
+		</h:commandButton>
+		<h:commandButton rendered="#{treeni != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
+			action="#{perustietoAdmin.tallennaTreeni}">
+			<f:ajax execute="@form" render="@form" />
+		</h:commandButton>
+		<h:commandButton rendered="#{treeni != null}" styleClass="ikoni"
+			onclick="ice.ace.instance('form:vahvistaTreeninPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+	</h:panelGrid>
 	<ace:dataTable value="#{treenit}" var="_treeni" selectionMode="single" stateMap="#{perustietoAdmin.treeniRSM}"
 		rows="10" rowSelectListener="#{perustietoAdmin.treeniValittu}" paginator="true" paginatorPosition="bottom"
 		paginatorAlwaysVisible="false">
@@ -186,12 +194,4 @@
 			</ace:listControl>
 		</ace:panel>
 	</h:panelGrid>
-	<h:panelGrid columns="2" rendered="#{treeni != null}">
-		<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{perustietoAdmin.tallennaTreeni}">
-			<f:ajax execute="@form" render="@form" />
-		</h:commandButton>
-		<h:commandButton styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaTreeninPoisto').show();"
-			image="/kuvat/poista.png" immediate="true" />
-	</h:panelGrid>
-
 </ui:composition>
