--- a/src/main/webapp/admin/perustiedot/treenityypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/treenityypit.xhtml
@@ -10,11 +10,19 @@
 		</h:panelGrid>
 	</ace:confirmationDialog>
 	<h:panelGrid>
-		<h:commandButton action="#{perustietoAdmin.lisääTreenityyppi}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-			immediate="true">
-			<ace:ajax render="@form" />
-		</h:commandButton>
-		<h:panelGrid columns="3" columnClasses="tabletop, tabletop, tabletop">
+		<h:panelGrid columns="3">
+			<h:commandButton action="#{perustietoAdmin.lisääTreenityyppi}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+				immediate="true">
+				<ace:ajax render="@form" />
+			</h:commandButton>
+			<h:commandButton rendered="#{treenityyppi != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
+				action="#{perustietoAdmin.tallennaTreenityyppi}">
+				<f:ajax execute="@form" render="@form" />
+			</h:commandButton>
+			<h:commandButton rendered="#{treenityyppi != null}" styleClass="ikoni"
+				onclick="ice.ace.instance('form:vahvistaTreenityypinPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+		</h:panelGrid>
+		<h:panelGrid columns="2" columnClasses="tabletop, tabletop">
 			<ace:dataTable value="#{treenityypit}" var="_treenityyppi" selectionMode="single" rows="10" style="width:300px"
 				rowSelectListener="#{perustietoAdmin.treenityyppiValittu}" stateMap="#{perustietoAdmin.treenityyppiRSM}"
 				paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false">
@@ -32,13 +40,6 @@
 						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
-				<h:panelGrid columns="2" rendered="#{treenityyppi != null}">
-					<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{perustietoAdmin.tallennaTreenityyppi}">
-						<f:ajax execute="@form" render="@form" />
-					</h:commandButton>
-					<h:commandButton styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaTreenityypinPoisto').show();"
-						image="/kuvat/poista.png" immediate="true" />
-				</h:panelGrid>
 			</h:panelGrid>
 		</h:panelGrid>
 	</h:panelGrid>
