--- a/src/main/webapp/admin/perustiedot/vyöarvot.xhtml
+++ b/src/main/webapp/admin/perustiedot/vyöarvot.xhtml
@@ -10,11 +10,19 @@
 		</h:panelGrid>
 	</ace:confirmationDialog>
 	<h:panelGrid>
-		<h:commandButton action="#{perustietoAdmin.lisääVyöarvo}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-			immediate="true">
-			<ace:ajax render="@form" />
-		</h:commandButton>
-		<h:panelGrid columns="3" columnClasses="tabletop, tabletop, tabletop">
+		<h:panelGrid columns="3">
+			<h:commandButton action="#{perustietoAdmin.lisääVyöarvo}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+				immediate="true">
+				<ace:ajax render="@form" />
+			</h:commandButton>
+			<h:commandButton rendered="#{vyöarvo != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
+				action="#{perustietoAdmin.tallennaVyöarvo}">
+				<f:ajax execute="@form" render="@form" />
+			</h:commandButton>
+			<h:commandButton rendered="#{vyöarvo != null}" styleClass="ikoni" image="/kuvat/poista.png" immediate="true"
+				onclick="ice.ace.instance('form:vahvistaVyöarvonPoisto').show();" />
+		</h:panelGrid>
+		<h:panelGrid columns="2" columnClasses="tabletop, tabletop">
 			<ace:dataTable value="#{vyöarvot}" var="_vyöarvo" selectionMode="single" rows="15"
 				rowSelectListener="#{perustietoAdmin.vyöarvoValittu}" paginator="true" paginatorPosition="bottom"
 				paginatorAlwaysVisible="false" stateMap="#{perustietoAdmin.vyöarvoRSM}">
@@ -35,7 +43,7 @@
 				</ace:column>
 			</ace:dataTable>
 			<h:panelGrid style="margin-left:20px; width:450px">
-				<ace:panel header="Vyöarvo" rendered="#{vyöarvo != null}" style="width:350px">
+				<ace:panel header="Vyöarvo" rendered="#{vyöarvo != null}" style="width:450px">
 					<h:panelGrid columns="2">
 						<h:outputText value="Nimi" />
 						<h:panelGrid>
@@ -45,7 +53,7 @@
 						<h:outputText value="Kuvaus" />
 						<h:panelGrid>
 							<ace:message for="form:kuvaus" />
-							<h:inputText value="#{vyöarvo.kuvaus}" id="kuvaus" size="30" />
+							<h:inputText value="#{vyöarvo.kuvaus}" id="kuvaus" size="20" />
 						</h:panelGrid>
 						<h:outputText value="Minimikuukaudet" />
 						<h:panelGrid>
@@ -64,13 +72,6 @@
 						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
-				<h:panelGrid columns="2" rendered="#{vyöarvo != null}">
-					<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{perustietoAdmin.tallennaVyöarvo}">
-						<f:ajax execute="@form" render="@form" />
-					</h:commandButton>
-					<h:commandButton styleClass="ikoni" image="/kuvat/poista.png" immediate="true"
-						onclick="ice.ace.instance('form:vahvistaVyöarvonPoisto').show();" />
-				</h:panelGrid>
 			</h:panelGrid>
 		</h:panelGrid>
 	</h:panelGrid>
