--- a/src/main/webapp/admin/perustiedot/treenit.xhtml
+++ b/src/main/webapp/admin/perustiedot/treenit.xhtml
@@ -10,7 +10,7 @@
 		</h:panelGrid>
 	</ace:confirmationDialog>
 	<h:panelGrid columns="3">
-		<h:commandButton action="#{perustietoAdmin.lisääTreeni}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+		<h:commandButton action="#{perustietoAdmin.lisääTreeni}" styleClass="ikoni" image="/kuvat/lisää.png"
 			immediate="true">
 			<ace:ajax render="@form" />
 		</h:commandButton>
