--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -1,13 +1,16 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<h:commandButton action="#{harrastajaAdmin.lisääHarrastaja}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-		immediate="true">
-		<f:ajax render="@form" />
-	</h:commandButton>
-	<h:button outcome="/tuo.xhtml" image="/kuvat/tuo.png" immediate="true" styleClass="ikoni"
-		rendered="#{harrastaja.ylläpitäjä}" />
-
+	<h:panelGrid columns="3">
+		<h:commandButton action="#{harrastajaAdmin.lisääHarrastaja}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+			immediate="true">
+			<f:ajax render="@form" />
+		</h:commandButton>
+		<h:commandButton rendered="#{harrastaja != null}" styleClass="ikoni" action="#{harrastajaAdmin.tallennaHarrastaja}"
+			image="/kuvat/tallenna.jpg" />
+		<h:commandButton rendered="#{harrastaja != null}" styleClass="ikoni"
+			onclick="ice.ace.instance('form:vahvistaHarrastajanPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+	</h:panelGrid>
 	<ace:dataTable value="#{harrastajat}" var="_harrastaja" selectionMode="single" paginator="true"
 		paginatorPosition="bottom" paginatorAlwaysVisible="false" stateMap="#{harrastajaAdmin.harrastajaRSM}" rows="10"
 		rowSelectListener="#{harrastajaAdmin.harrastajaValittu}">
@@ -21,7 +24,7 @@
 		</ace:column>
 		<ace:column headerText="Syntynyt" styleClass="lefttext">
 			<h:outputText value="#{_harrastaja.syntynyt}">
-				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET"/>
+				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET" />
 			</h:outputText>
 		</ace:column>
 		<ace:column headerText="Ikä" styleClass="lefttext">
