--- a/src/main/webapp/admin/harrastajat/sopimukset.xhtml
+++ b/src/main/webapp/admin/harrastajat/sopimukset.xhtml
@@ -9,10 +9,18 @@
 			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaSopimuksenPoisto').hide()" />
 		</h:panelGrid>
 	</ace:confirmationDialog>
-	<h:commandButton action="#{harrastajaAdmin.lisääSopimus()}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-		immediate="true" stateMap="#{harrastajaAdmin.sopimusRSM}">
-		<ace:ajax render="@form" />
-	</h:commandButton>
+	<h:panelGrid columns="3">
+		<h:commandButton action="#{harrastajaAdmin.lisääSopimus()}" styleClass="ikoni" image="/kuvat/lisää.png"
+			immediate="true" stateMap="#{harrastajaAdmin.sopimusRSM}">
+			<ace:ajax render="@form" />
+		</h:commandButton>
+		<h:commandButton rendered="#{sopimus != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
+			action="#{harrastajaAdmin.tallennaSopimus}">
+			<f:ajax execute="@form" render="@form" />
+		</h:commandButton>
+		<h:commandButton styleClass="ikoni" rendered="#{sopimus != null}"
+			onclick="ice.ace.instance('form:vahvistaSopimuksenPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+	</h:panelGrid>
 	<ace:dataTable value="#{harrastaja.sopimukset}" var="_sopimus" selectionMode="single" rows="10" paginator="true"
 		paginatorPosition="bottom" paginatorAlwaysVisible="false" rowSelectListener="#{harrastajaAdmin.sopimusValittu}"
 		stateMap="#{harrastajaAdmin.sopimusRSM}">
@@ -20,24 +28,24 @@
 			<h:outputText value="#{_sopimus.tyyppi.nimi}" />
 		</ace:column>
 		<ace:column headerText="Maksuväli" styleClass="lefttext">
-			<h:outputText value="#{_sopimus.maksuväli}" rendered="#{_sopimus.tyyppi.kuukausilaskutus}"/>
+			<h:outputText value="#{_sopimus.maksuväli}" rendered="#{_sopimus.tyyppi.kuukausilaskutus}" />
 		</ace:column>
 		<ace:column headerText="Umpeutuu" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.umpeutuu}">
-				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET"/>
+				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET" />
 			</h:outputText>
 		</ace:column>
 		<ace:column headerText="Treenikertoja" styleClass="lefttext">
-			<h:outputText value="#{_sopimus.treenikertoja}" rendered="#{_sopimus.tyyppi.treenikertoja}"/>
+			<h:outputText value="#{_sopimus.treenikertoja}" rendered="#{_sopimus.tyyppi.treenikertoja}" />
 		</ace:column>
 		<ace:column headerText="Luotu" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.luotu}">
-				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET"/>
+				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET" />
 			</h:outputText>
 		</ace:column>
 		<ace:column headerText="Viim. lask." styleClass="lefttext">
 			<h:outputText value="#{_sopimus.viimeksiLaskutettu}">
-				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET"/>
+				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET" />
 			</h:outputText>
 		</ace:column>
 	</ace:dataTable>
@@ -60,16 +68,16 @@
 				<ace:message for="form:umpeutuu" />
 				<ace:dateTimeEntry value="#{sopimus.umpeutuu}" renderAsPopup="true" pattern="dd.MM.yyyy" id="umpeutuu" />
 			</h:panelGrid>
-			<h:outputText value="Treenikertoja" rendered="#{sopimus.tyyppi.treenikertoja}"/>
+			<h:outputText value="Treenikertoja" rendered="#{sopimus.tyyppi.treenikertoja}" />
 			<h:panelGrid rendered="#{sopimus.tyyppi.treenikertoja}">
 				<ace:message for="form:a_treenikertoja" />
 				<h:inputText value="#{sopimus.treenikertoja}" id="a_treenikertoja" size="5" />
 			</h:panelGrid>
-			<h:outputText value="Maksuväli" rendered="#{sopimus.tyyppi.kuukausilaskutus}"/>
+			<h:outputText value="Maksuväli" rendered="#{sopimus.tyyppi.kuukausilaskutus}" />
 			<h:panelGrid rendered="#{sopimus.tyyppi.kuukausilaskutus}">
 				<ace:message for="form:maksuväli" />
 				<h:selectOneMenu value="#{sopimus.maksuväli}" required="true" id="maksuväli">
-					<f:selectItem itemValue="" itemLabel="" noSelectionOption="true"/>
+					<f:selectItem itemValue="" itemLabel="" noSelectionOption="true" />
 					<f:selectItem itemValue="1" itemLabel="1kk" />
 					<f:selectItem itemValue="2" itemLabel="2kk" />
 					<f:selectItem itemValue="3" itemLabel="3kk" />
@@ -80,10 +88,4 @@
 			</h:panelGrid>
 		</h:panelGrid>
 	</ace:panel>
-	<h:commandButton rendered="#{sopimus != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-		action="#{harrastajaAdmin.tallennaSopimus}">
-		<f:ajax execute="@form" render="@form" />
-	</h:commandButton>
-	<h:commandButton styleClass="ikoni" rendered="#{sopimus != null and sopimus.tallennettu}"
-		onclick="ice.ace.instance('form:vahvistaSopimuksenPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 </ui:composition>
