--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -9,10 +9,17 @@
 			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" />
 		</h:panelGrid>
 	</ace:confirmationDialog>
-	<h:commandButton action="#{harrastajaAdmin.lisääVyökoe}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-		immediate="true">
-		<ace:ajax render="@form" />
-	</h:commandButton>
+	<h:panelGrid colums="3">
+		<h:commandButton action="#{harrastajaAdmin.lisääVyökoe}" styleClass="ikoni" image="/kuvat/lisää.png" immediate="true">
+			<ace:ajax render="@form" />
+		</h:commandButton>
+		<h:commandButton rendered="#{vyökoe != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
+			action="#{harrastajaAdmin.tallennaVyökoe}">
+			<f:ajax execute="@form" render="@form" />
+		</h:commandButton>
+		<h:commandButton rendered="#{vyökoe != null}" styleClass="ikoni"
+			onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+	</h:panelGrid>
 	<ace:dataTable value="#{harrastaja.vyökokeet}" var="_vyökoe" selectionMode="single" rows="10" paginator="true"
 		paginatorPosition="bottom" paginatorAlwaysVisible="false" rowSelectListener="#{harrastajaAdmin.vyökoeValittu}"
 		stateMap="#{harrastajaAdmin.vyökoeRSM}">
@@ -57,14 +64,4 @@
 			</h:panelGrid>
 		</h:panelGrid>
 	</ace:panel>
-	<h:commandButton rendered="#{vyökoe != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-		action="#{harrastajaAdmin.tallennaVyökoe}">
-		<f:ajax execute="@form" render="@form" />
-	</h:commandButton>
-	<h:commandButton rendered="#{vyökoe != null}" value="x" styleClass="ikoni" immediate="true"
-		action="#{harrastajaAdmin.peruutaVyökoemuutos}" image="/kuvat/peruuta_muutos.png">
-		<f:ajax render="@form" />
-	</h:commandButton>
-	<h:commandButton rendered="#{vyökoe.poistettavissa}" value="x" styleClass="ikoni"
-		onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 </ui:composition>
