--- a/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
@@ -11,7 +11,7 @@
 	</ace:confirmationDialog>
 	<h:panelGrid>
 		<h:panelGrid columns="3">
-			<h:commandButton action="#{perustietoAdmin.lisääSopimustyyppi}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+			<h:commandButton action="#{perustietoAdmin.lisääSopimustyyppi}" styleClass="ikoni" image="/kuvat/lisää.png"
 				immediate="true">
 				<ace:ajax render="@form" />
 			</h:commandButton>
